removed width causing issues on smaller resolutions

--- a/src/App.css
+++ b/src/App.css
@@ -93,7 +93,6 @@ button:active {
 }
 
 .weatherInfo {
-    width: 60%;
     font-size: 20px;
     font-weight: 200;
     letter-spacing: 2px;
